// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tables reducer should create response for CREATE_TABLE_SUCCESS 1`] = `
Object {
  "Katello::Subscriptions": Object {
    "columns": Array [
      "id",
      "product_id",
      "contract_number",
      "start_date",
      "end_date",
    ],
    "created_at": "2018-06-22 16:01:06 -0600",
    "id": 36,
    "name": "Katello::Subscriptions",
    "updated_at": "2018-06-22 22:38:15 -0600",
  },
  "loading": false,
}
`;

exports[`Tables reducer should have error on TABLE_REQUEST_FAILURE 1`] = `
Object {
  "loading": false,
}
`;

exports[`Tables reducer should keep loading state on TABLES_REQUEST 1`] = `
Object {
  "loading": true,
}
`;

exports[`Tables reducer should pull table list from response TABLES_SUCCESS 1`] = `
Object {
  "Katello::Subscriptions": Object {
    "columns": Array [
      "id",
      "product_id",
      "contract_number",
      "start_date",
      "end_date",
    ],
    "created_at": "2018-06-22 16:01:06 -0600",
    "id": 36,
    "name": "Katello::Subscriptions",
    "updated_at": "2018-06-22 22:38:15 -0600",
  },
  "loading": false,
}
`;

exports[`Tables reducer should return the initial state 1`] = `
Object {
  "loading": false,
}
`;

exports[`Tables reducer should update response UPDATE_TABLE_SUCCESS 1`] = `
Object {
  "Katello::Subscriptions": Object {
    "columns": Array [
      "id",
      "product_id",
      "contract_number",
      "start_date",
      "end_date",
    ],
    "created_at": "2018-06-22 16:01:06 -0600",
    "id": 36,
    "name": "Katello::Subscriptions",
    "updated_at": "2018-06-22 22:38:15 -0600",
  },
  "loading": false,
}
`;
